src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_comp/lt_boolean_boolean.deca
// Description :
//    test lt entre un boolean et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type boolean, boolean, attendu: ‘int’ ou ‘float’

{
boolean a;
boolean b;
boolean c = a < b;
}
